==> gavinlyonsrepo/FM_Radio_PICO/src/ch1115/ER_OLEDM1_CH1115.cpp <==
#include <stdio.h>
#include "pico/stdlib.h"
#include "../include/ch1115/ER_OLEDM1_CH1115.hpp"
#include "../include/ch1115/ER_OLEDM1_CH1115_graphics.hpp"

void ERMCH1115::OLEDbegin (uint8_t OLEDcontrast, spi_inst_t *spiType, uint32_t spiSpeedKhz) 
{
	_OLEDcontrast  = OLEDcontrast ;

	gpio_init(_OLED_CD);
	gpio_init(_OLED_RST);
	gpio_init(_OLED_CS);
	gpio_init(_OLED_SCLK);
	gpio_init(_OLED_DIN);

	gpio_set_dir(_OLED_CD, GPIO_OUT);
	gpio_set_dir(_OLED_RST, GPIO_OUT);
	gpio_set_dir(_OLED_CS, GPIO_OUT);
	gpio_put(_OLED_CS, true);
	
	spi_inst_t *spi = spiType;
	// Initialize SPI port 
	spi_init(spi, spiSpeedKhz * 1000);
	// Initialize SPI pins
	gpio_set_function(_OLED_SCLK, GPIO_FUNC_SPI);
	gpio_set_function(_OLED_DIN, GPIO_FUNC_SPI);

    // Set SPI format
    spi_set_format( spi,   // SPI instance
                    8,      // Number of bits per transfer
                    SPI_CPOL_0,      // Polarity (CPOL)
                    SPI_CPHA_0,      // Phase (CPHA)
                    SPI_MSB_FIRST);

  
  	OLEDinit();
}

void ERMCH1115::send_data(uint8_t data)
{
	spi_write_blocking(spi, &data, 1);

}

void ERMCH1115::OLEDFillPage(uint8_t page_num, uint8_t dataPattern,uint8_t mydelay) 
{

	ERMCH1115_CS_SetLow;
	send_command(ERMCH1115_SET_COLADD_LSB, 0); 
	send_command(ERMCH1115_SET_COLADD_MSB, 0);
	send_command(ERMCH1115_SET_PAGEADD, page_num); 
	ERMCH1115_CS_SetHigh;
	busy_wait_us(2);
	ERMCH1115_CS_SetLow;
	uint8_t numofbytes = OLED_WIDTH; // 128 bytes
	for (uint8_t i = 0; i < numofbytes; i++) 
	{
	  send_data(dataPattern);
	  busy_wait_ms(mydelay);
	}
	ERMCH1115_CS_SetHigh;

}
