==> gavinlyonsrepo/ER_OLEDM1_CH1115/src/ER_OLEDM1_CH1115.cpp <==
#include "ER_OLEDM1_CH1115.hpp"

void ERMCH1115::OLEDbegin (uint8_t OLEDcontrast) 
{
  pinMode(_OLED_CD , OUTPUT);
  pinMode(_OLED_RST, OUTPUT);
  pinMode(_OLED_CS, OUTPUT);
  
  _OLEDcontrast  = OLEDcontrast ;
  
  if (isHardwareSPI()) 
  {
		SPI.begin();
  }else
  {
		pinMode(_OLED_DIN, OUTPUT);
		pinMode(_OLED_SCLK, OUTPUT);
  }
  
  OLEDinit();
}

void ERMCH1115::OLEDFillPage(uint8_t page_num, uint8_t dataPattern,uint8_t mydelay) 
{
	if (isHardwareSPI()) {SPI_TRANSACTION_START}
	ERMCH1115_CS_SetLow;
	send_command(ERMCH1115_SET_COLADD_LSB, 0); 
	send_command(ERMCH1115_SET_COLADD_MSB, 0);
	send_command(ERMCH1115_SET_PAGEADD, page_num); 
	ERMCH1115_CS_SetHigh;
	delayMicroseconds(2);
	ERMCH1115_CS_SetLow;
	uint8_t numofbytes = OLED_WIDTH; // 128 bytes
	for (uint8_t i = 0; i < numofbytes; i++) 
	{
	  send_data(dataPattern);
	  delay(mydelay);
	}
	ERMCH1115_CS_SetHigh;
	if (isHardwareSPI()) {SPI_TRANSACTION_END}
}

void ERMCH1115::send_data(uint8_t byte)
{
  if (isHardwareSPI()) 
  {
	(void)SPI.transfer(byte); 
  }else
  {
	CustomshiftOut(MSBFIRST, byte); // README note 21
  }
}
